--- a/episodes/season_10.yml
+++ b/episodes/season_10.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Homer thinks he can net a fortune by recycling grease.  Lisa helps
     organize a school dance.
-  disneyplus_id:
+  disneyplus_id: 98ee055e-5747-4d5f-adde-c31d45942164
   simpsonsworld_id: 292933187533
   good: true
   characters:
@@ -14,7 +14,7 @@ episodes:
   episode: 2
   description: After realizing half his life is over, Homer decides to become the
     next Thomas Edison.
-  disneyplus_id:
+  disneyplus_id: 986ba983-649f-4e35-83b1-2aae99e85008
   simpsonsworld_id: 473117763575
   good: true
   characters:
@@ -23,7 +23,7 @@ episodes:
   episode: 3
   description: Bart tends to a nest filled with eggs after he inadvertently kills
     a bird with a BB gun.
-  disneyplus_id:
+  disneyplus_id: 964531ad-96b6-4271-84e9-995804d0fa59
   simpsonsworld_id: 473109571557
   good: true
   characters:
@@ -33,7 +33,7 @@ episodes:
   description: An evil toupee possesses Homer; Bart and Lisa find themselves trapped
     inside an Itchy & Scratchy cartoon; baby Maggie turns out to be the daughter of
     a space alien.
-  disneyplus_id:
+  disneyplus_id: ce588fbc-5976-4c34-b1fd-9cd5ca8b1ce8
   simpsonsworld_id: 473130051681
   good: true
   characters:
@@ -43,7 +43,7 @@ episodes:
   episode: 5
   description: Homer befriends a group of Hollywood celebrities vacationing in a remote
     part of town and promises to keep their whereabouts a secret.
-  disneyplus_id:
+  disneyplus_id: 06ca06ee-00ef-48af-bc90-850a35c543b4
   simpsonsworld_id: 473147459674
   good: false
   characters:
@@ -51,7 +51,7 @@ episodes:
   season: 10
   episode: 6
   description: Homer embraces his newly discovered hippie heritage.
-  disneyplus_id:
+  disneyplus_id: 87059d07-aa2b-49c2-bdc2-c0f7ff8ef5c8
   simpsonsworld_id: 473138243754
   good: false
   characters:
@@ -60,7 +60,7 @@ episodes:
   episode: 7
   description: Lisa suffers a guilty conscience after she cheats on an exam.  Homer
     believes he will save a fortune by raising his own lobster.
-  disneyplus_id:
+  disneyplus_id: 2a9e93c8-00aa-4663-9ebc-ad960d0cfc28
   simpsonsworld_id: 473152579638
   good: true
   characters:
@@ -69,7 +69,7 @@ episodes:
   episode: 8
   description: Homer offers to donate one of his kidneys to Grampa until he realizes
     the surgery will place his own life in jeopardy.
-  disneyplus_id:
+  disneyplus_id: 2af7dae5-26f3-4865-a72f-a2f34b2ace54
   simpsonsworld_id: 473158211896
   good: false
   characters:
@@ -77,7 +77,7 @@ episodes:
   season: 10
   episode: 9
   description: Homer takes on the mob when he acts as Mayor Quimby's bodyguard.
-  disneyplus_id:
+  disneyplus_id: df6e8f4c-cc93-4613-882a-91eb8e98dc12
   simpsonsworld_id: 473163843671
   good: true
   characters:
@@ -85,7 +85,7 @@ episodes:
   season: 10
   episode: 10
   description: Homer shows Flanders how to enjoy life by taking him to Las Vegas.
-  disneyplus_id:
+  disneyplus_id: df93d2c8-8a69-464f-a87f-05f204134039
   simpsonsworld_id: 473115203586
   good: false
   characters:
@@ -93,7 +93,7 @@ episodes:
   season: 10
   episode: 11
   description: The children of Springfield rebel after Wiggum enforces a curfew.
-  disneyplus_id:
+  disneyplus_id: f634b3fc-2a84-48c6-9e12-fa708a661794
   simpsonsworld_id: 473155651508
   good: true
   characters:
@@ -102,7 +102,7 @@ episodes:
   episode: 12
   description: Homer and his friends eagerly anticipate attending the Super Bowl until
     a ticketing snafu threatens to keep them from seeing the game.
-  disneyplus_id:
+  disneyplus_id: 6e11f7db-7f5d-4f6d-bd0e-c91260701a71
   simpsonsworld_id: 473132611959
   good: false
   characters:
@@ -111,7 +111,7 @@ episodes:
   episode: 13
   description: Homer changes his name when a dimwitted television show character named
     "Homer Simpson" becomes an overnight sensation.
-  disneyplus_id:
+  disneyplus_id: 1df9a8f7-96df-41a9-a595-69f6d66fbd42
   simpsonsworld_id: 473140803870
   good: false
   characters:
@@ -120,7 +120,7 @@ episodes:
   episode: 14
   description: Apu showers his wife with Valentine's Day surprises making men throughout
     Springfield look like cheapskates.
-  disneyplus_id:
+  disneyplus_id: 964c06b3-4118-4ca9-93ef-207e45c94aba
   simpsonsworld_id: 473104963819
   good: true
   characters:
@@ -129,7 +129,7 @@ episodes:
   episode: 15
   description: Marge discovers the pleasures of driving a sport utility vehicle until
     aggressive highway habits cost her.
-  disneyplus_id:
+  disneyplus_id: 3f660bb1-67ba-4923-b837-432790058d0f
   simpsonsworld_id: 473097795997
   good: true
   characters:
@@ -138,7 +138,7 @@ episodes:
   episode: 16
   description: Lisa exhibits signs of stress when she is forced into sharing her brother's
     bedroom.  Marge becomes addicted to eavesdropping on cellular phone conversations.
-  disneyplus_id:
+  disneyplus_id: d8eb73d8-2008-41d6-8213-672b088afac9
   simpsonsworld_id: 473093187636
   good: false
   characters:
@@ -147,7 +147,7 @@ episodes:
   episode: 17
   description: Homer and Bart attempt to deliver a dead trucker's cargo on schedule.  Meanwhile,
     Marge decides to have an adventure of her own and purchases a new doorbell.
-  disneyplus_id:
+  disneyplus_id: 3f4e5b4d-44df-4a7f-bf29-d2a4fd9ec3c7
   simpsonsworld_id: 473095235738
   good: true
   characters:
@@ -157,7 +157,7 @@ episodes:
   description: While listening to one of Reverend Lovejoy's sermons on a sweltering
     Easter Sunday morning, the Simpsons fall asleep and envision themselves as characters
     from the Bible.
-  disneyplus_id:
+  disneyplus_id: bd37c577-9c24-4434-96a1-4b188f2536d4
   simpsonsworld_id: 299678275566
   good: false
   characters:
@@ -166,7 +166,7 @@ episodes:
   episode: 19
   description: Homer pursues a career as an artist when his misshapen barbecue pit
     attracts the attention of a gallery.
-  disneyplus_id:
+  disneyplus_id: 01ff0cb7-1b7a-4f31-90b5-a53eb3f77a84
   simpsonsworld_id: 310457411688
   good: true
   characters:
@@ -174,7 +174,7 @@ episodes:
   season: 10
   episode: 20
   description: Bart must perform community service at Grampa's retirement home.
-  disneyplus_id:
+  disneyplus_id: 06a3726e-ba9a-4252-9df7-5e633923ed24
   simpsonsworld_id: 279757379586
   good: true
   characters:
@@ -183,7 +183,7 @@ episodes:
   episode: 21
   description: Mr. Burns attempts to win adoration by transporting the Loch Ness monster
     to Springfield.
-  disneyplus_id:
+  disneyplus_id: f477542d-4817-45a3-8f4c-c595b57508d8
   simpsonsworld_id: 310427203648
   good: false
   characters:
@@ -191,7 +191,7 @@ episodes:
   season: 10
   episode: 22
   description: Lisa is invited to join Mensa; Homer receives a free erotic photo session.
-  disneyplus_id:
+  disneyplus_id: 57670ba9-320b-4231-8ae1-ecdf13828b43
   simpsonsworld_id: 306868803826
   good: false
   characters:
@@ -200,7 +200,7 @@ episodes:
   episode: 23
   description: The Simpsons board a mega-saver flight for Tokyo, only to find themselves
     trapped overseas when they run out of money.
-  disneyplus_id:
+  disneyplus_id: a0cf3a5a-f8c7-4bd9-a0f7-e1d7ce1e1d40
   simpsonsworld_id: 306901571847
   good: true
   characters:
