--- a/episodes/season_21.yml
+++ b/episodes/season_21.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Homer ends up with a superhero's physique after he's chosen to appear
     in a film based on a character created by The Comic Book Guy.
-  disneyplus_id:
+  disneyplus_id: 88af7df7-b6fc-410e-9e07-92dda4a29a47
   simpsonsworld_id: 250297923589
   good: false
   characters:
@@ -17,7 +17,7 @@ episodes:
   description: Principal Skinner fires Mrs. Krabappel after she makes a drunken fool
     of herself at the elementary school - but what Skinner doesn't know is that Bart
     spiked her coffee with alcohol.
-  disneyplus_id:
+  disneyplus_id: 67d61bfb-23a7-4884-b587-ee93135ddc02
   simpsonsworld_id: 310517315862
   good: false
   characters:
@@ -28,7 +28,7 @@ episodes:
   episode: 3
   description: Marge vows to drive mixed martial arts from Springfield by defeating
     a fight promoter in the ring.
-  disneyplus_id:
+  disneyplus_id: 2388825f-aab3-4dd2-8661-592808bf85bc
   simpsonsworld_id: 250299971833
   good: false
   characters:
@@ -39,7 +39,7 @@ episodes:
   description: Classic movie monsters are attacked by their spouses; Lisa and Bart
     exchange murders in a Hitchcock spoof; Bart is the key to saving Springfield from
     zombies; Moe's microbrewery mixes beer with Homer's blood.
-  disneyplus_id:
+  disneyplus_id: f38f6b8f-47f4-4d69-aff9-ab3a3094245e
   simpsonsworld_id: 262634051998
   good: false
   characters:
@@ -49,7 +49,7 @@ episodes:
   episode: 5
   description: Homer's life turns into nonstop misery when he becomes Carl's assistant;
     Marge poses for a sexy calendar.
-  disneyplus_id:
+  disneyplus_id: ae2e4f38-dba6-4deb-868a-53d89aedda2d
   simpsonsworld_id: 250304067959
   good: false
   characters:
@@ -61,7 +61,7 @@ episodes:
   episode: 6
   description: Skinner tells Bart about a former Springfield Elementary student who
     was the best prankster ever; Marge begins shopping at a natural foods store.
-  disneyplus_id:
+  disneyplus_id: 564a90ff-acea-4ef1-98f4-c3014b817f9f
   simpsonsworld_id: 792414787985
   good: maybe
   characters:
@@ -70,7 +70,7 @@ episodes:
   episode: 7
   description: Lisa befriends a group of Wiccans who are accused of blinding the people
     of Springfield with a spell.
-  disneyplus_id:
+  disneyplus_id: 7e3a408b-0351-4058-92fe-573098060e2a
   simpsonsworld_id: 250307139830
   good: maybe
   characters:
@@ -79,7 +79,7 @@ episodes:
   episode: 8
   description: Bart attempts to get Homer and Marge pregnant so he can have a brother
     to hang out with.
-  disneyplus_id:
+  disneyplus_id: 82a1a502-53a6-4c94-be36-3db8a55d12a3
   simpsonsworld_id: 250311235599
   good: maybe
   characters:
@@ -88,7 +88,7 @@ episodes:
   episode: 9
   description: Homer becomes jealous when a reporter takes an interest in Grampa's
     life; Lisa loses a stuffed lamb that Bart brought home from school.
-  disneyplus_id:
+  disneyplus_id: 5837bd57-dcbb-4658-9bee-071dcfb532db
   simpsonsworld_id: 250369603964
   good: maybe
   characters:
@@ -97,7 +97,7 @@ episodes:
   episode: 10
   description: Krusty ends up playing second fiddle to Princess Penelope, a new character
     on his show... only to end up falling in love with the actress who plays her.
-  disneyplus_id:
+  disneyplus_id: 93d48c4e-6bcc-4da6-aa24-379f32809368
   simpsonsworld_id: 250379331672
   good: maybe
   characters:
@@ -106,7 +106,7 @@ episodes:
   episode: 11
   description: Homer wins a million-dollar lottery but doesn't tell his family the
     news; Lisa stimulates nursing home patients with an interactive Wii-like device.
-  disneyplus_id:
+  disneyplus_id: f6b9c035-54ac-4356-9a03-c039dd95ee4c
   simpsonsworld_id: 279804995696
   good: maybe
   characters:
@@ -115,7 +115,7 @@ episodes:
   episode: 12
   description: The Simpsons head to the Winter Olympics in Canada after Marge and
     Homer join a curling team; Lisa becomes addicted to collecting Olympic pins.
-  disneyplus_id:
+  disneyplus_id: c9b38de3-fef9-4da6-96ea-9e5b44e3e3ed
   simpsonsworld_id: 250385475646
   good: maybe
   characters:
@@ -124,7 +124,7 @@ episodes:
   episode: 13
   description: Lisa discovers that her Southern ancestors helped a slave escape to
     freedom.
-  disneyplus_id:
+  disneyplus_id: cb0d811d-9959-4641-8ec5-cedd2e07bbb8
   simpsonsworld_id: 255100483932
   good: maybe
   characters:
@@ -134,7 +134,7 @@ episodes:
   description: Bart creates friction between Marge and Homer so he can get out of
     doing homework.  But when the plot fails, Bart tries to destroy the elementary
     school by reactivating an old Springfield subway line.
-  disneyplus_id:
+  disneyplus_id: 6b41ad4a-fc4e-460f-a2e0-790773a93b7b
   simpsonsworld_id: 250390595937
   good: maybe
   characters:
@@ -143,7 +143,7 @@ episodes:
   episode: 15
   description: Bart stirs up trouble when he kisses a girl at school; Lisa's popularity
     soars when she receives a failing grade on a test.
-  disneyplus_id:
+  disneyplus_id: f41d6853-3d30-4749-9b15-3553be80418b
   simpsonsworld_id: 250397251688
   good: maybe
   characters:
@@ -153,7 +153,7 @@ episodes:
   description: Flanders attempts to redeem Homer during a Bible study trip to Israel;
     Homer becomes delusional after getting lost in the desert and ends up believing
     he's the Chosen One.
-  disneyplus_id:
+  disneyplus_id: c700ad86-11bd-4a7b-8a66-b1871c47173b
   simpsonsworld_id: 279809091713
   good: maybe
   characters:
@@ -163,7 +163,7 @@ episodes:
   description: When Mr. Burns is sent to prison for possessing stolen art, he places
     Smithers in charge of running the nuclear power plant; Bart helps Lisa maintain
     an ant farm.
-  disneyplus_id:
+  disneyplus_id: 51b45e30-b646-4b83-91a4-81422d38f972
   simpsonsworld_id: 250508867924
   good: maybe
   characters:
@@ -172,7 +172,7 @@ episodes:
   episode: 18
   description: After he's sentenced to perform community service, Homer befriends
     Chief Wiggum; Marge mistakes Bart's love for a Japanese card game for a drug addiction.
-  disneyplus_id:
+  disneyplus_id: 19d92204-1f6f-46b1-96fe-36118aaf1fce
   simpsonsworld_id: 250515523850
   good: maybe
   characters:
@@ -180,7 +180,7 @@ episodes:
   season: 21
   episode: 19
   description: Lisa comes to the aid of a whale that washes up on Springfield Beach.
-  disneyplus_id:
+  disneyplus_id: 5018ece6-0256-4692-b13a-ff3aa9b07aed
   simpsonsworld_id: 250519619700
   good: maybe
   characters:
@@ -190,7 +190,7 @@ episodes:
   description: After a bomb squad mistakenly blows up Homer's unattended gym bag,
     releasing radiation into the city, Springfield equips itself with surveillance
     cameras to deter terrorism, allowing Flanders to impose his views on others.
-  disneyplus_id:
+  disneyplus_id: f675cbf8-c051-4be9-a2d7-fbf3752afd40
   simpsonsworld_id: 250523203904
   good: maybe
   characters:
@@ -199,7 +199,7 @@ episodes:
   episode: 21
   description: As Mother's Day approaches, Homer, Apu and Reverend Lovejoy receive
     a letter from Moe warning that he's going to run away with one of their wives.
-  disneyplus_id:
+  disneyplus_id: 7a2a3403-6a37-4cf3-ae36-c6eb364abebd
   simpsonsworld_id: 250592323527
   good: maybe
   characters:
@@ -208,7 +208,7 @@ episodes:
   episode: 22
   description: Bart is convinced that his new neighbor is Sideshow Bob - even though
     the man looks nothing like his arch enemy.
-  disneyplus_id:
+  disneyplus_id: 1c755dcb-64db-43ea-9444-d03e1fecf09e
   simpsonsworld_id: 250531907855
   good: maybe
   characters:
@@ -218,7 +218,7 @@ episodes:
   description: Moe discovers a talent for judging contests, leading to an appearance
     on the television series 'American Idol;' Homer drives Marge crazy when he begins
     hanging around the house.
-  disneyplus_id:
+  disneyplus_id: 735f75cf-d156-40f7-b2d0-893a32eb59a4
   simpsonsworld_id: 255074883631
   good: maybe
   characters:
