--- a/episodes/season_23.yml
+++ b/episodes/season_23.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Homer attempts to help a former CIA agent plagued by violent flashbacks
     from his past.
-  disneyplus_id:
+  disneyplus_id: 71b4298a-1375-487d-9f31-bdaa8cbcbc2e
   simpsonsworld_id: 273517123847
   good: false
   characters:
@@ -16,7 +16,7 @@ episodes:
   description: Superintendant Chalmers teaches Bart about Teddy Roosevelt after personally
     taking charge of the boy's education. When Chalmers loses his job, Bart and his
     classmates attempt to get him reinstated.
-  disneyplus_id:
+  disneyplus_id: 59a04eed-8b31-4baf-8a35-bab47d03659d
   simpsonsworld_id: 273518659843
   good: true
   characters:
@@ -28,7 +28,7 @@ episodes:
   description: In three terrifying Halloween tales... Homer discovers a unique way
     to communicate with his family; a spoof of 'Dexter' features Homer tricking Flanders;
     a spoof of the movie 'Avatar' features Bart as a tentacled alien.
-  disneyplus_id:
+  disneyplus_id: e3246047-78cf-422e-8a4e-255937be23a4
   simpsonsworld_id: 230493251807
   good: false
   characters:
@@ -39,7 +39,7 @@ episodes:
   description: With some help from Martin Prince, Bart constructs cute, baby seal-like
     robots that rival Lisa's entry in a science fair project; Homer ends up working
     for his new assistant.
-  disneyplus_id:
+  disneyplus_id: 29f3160e-8e9e-4a6f-b561-6e7eda6121ed
   simpsonsworld_id: 273736771817
   good: false
   characters:
@@ -51,7 +51,7 @@ episodes:
   description: As Homer and Marge vie for the kids' approval... Marge, Bart and Lisa
     become successful food bloggers; Homer finds himself trapped in a meth lab after
     Marge deliberately gives him the wrong address for a restaurant.
-  disneyplus_id:
+  disneyplus_id: 4fe22703-23f3-4634-a071-1a604032e7b8
   simpsonsworld_id: 233194563539
   good: false
   characters:
@@ -62,7 +62,7 @@ episodes:
   description: After Lisa discovers that her favorite author doesn't exist, Homer
     forms a literary gang in hopes of writing a bestselling "tween" novel and raking
     in millions.
-  disneyplus_id:
+  disneyplus_id: b7ca559b-b06a-43d4-bd61-ec1e0e22aa45
   simpsonsworld_id: 264559171655
   good: false
   characters:
@@ -73,7 +73,7 @@ episodes:
   episode: 7
   description: Burns appoints Homer the nuclear power plant's new account man, damning
     him to a 'Mad Men'-like existence; Lisa becomes Bart's mentor.
-  disneyplus_id:
+  disneyplus_id: cb8c182c-b6f1-4bac-b637-de92eda72767
   simpsonsworld_id: 1071533123906
   good: false
   characters:
@@ -83,7 +83,7 @@ episodes:
   episode: 8
   description: After being fired from his popular kids' show, Krusty stages a comeback
     with help from an agent who's also an old flame.
-  disneyplus_id:
+  disneyplus_id: bc909c20-4bc6-47bf-a1b5-96c8ba44acb1
   simpsonsworld_id: 230516291714
   good: false
   characters:
@@ -94,7 +94,7 @@ episodes:
   description: Thirty years in the future, Bart and Lisa attempt to bond with their
     children on Christmas; an unwed Maggie gives birth while heading home for the
     holidays.
-  disneyplus_id:
+  disneyplus_id: 8613b781-eede-4d74-9b1a-23ce1164c0dc
   simpsonsworld_id: 230516803889
   good: false
   characters:
@@ -106,7 +106,7 @@ episodes:
   description: Homer becomes a celebrity after he voices his conservative opinions
     on a cable talk show, and attempts to convince leaders of the Republican party
     to nominate singer Ted Nugent for president.
-  disneyplus_id:
+  disneyplus_id: 0a2e7bf0-e93b-4f48-9c9a-1c77795dfff3
   simpsonsworld_id: 230549059731
   good: false
   characters:
@@ -116,7 +116,7 @@ episodes:
   episode: 11
   description: Lisa's idea for an online social network becomes a tremendous hit,
     but so many people become addicted to posting on the site, it leads to chaos.
-  disneyplus_id:
+  disneyplus_id: 70286e61-f44d-44d7-b054-22bc39a9c42a
   simpsonsworld_id: 230552131592
   good: false
   characters:
@@ -126,7 +126,7 @@ episodes:
   episode: 12
   description: Moe's bar rag tells the story of his existence; Milhouse tires of taking
     abuse from Bart.
-  disneyplus_id:
+  disneyplus_id: 167bafe2-53a2-4f75-a425-11c8f6843e5f
   simpsonsworld_id: 230553667901
   good: maybe
   characters:
@@ -136,7 +136,7 @@ episodes:
   description: As Valentine's Day approaches, Marge grows concerned when Lisa finds
     a boyfriend; Bart and Milhouse set out on a 'mythbusting' mission at Springfield
     Elementary.
-  disneyplus_id:
+  disneyplus_id: c5e4fe9d-f086-46bf-92c7-fc75c2ef2826
   simpsonsworld_id: 230562371905
   good: maybe
   characters:
@@ -145,7 +145,7 @@ episodes:
   episode: 14
   description: Fed up with the family's negative impact on the city, townspeople banish
     the Simpsons from Springfield.
-  disneyplus_id:
+  disneyplus_id: 30f5a709-b305-4c61-9483-515ce22d9493
   simpsonsworld_id: 230541891832
   good: maybe
   characters:
@@ -155,7 +155,7 @@ episodes:
   description: Bart becomes a famous street artist after he plasters Springfield with
     unflattering graffiti of Homer's likeness; Apu panics when he's forced to compete
     with a friendly grocery store chain featuring a South Pacific motif.
-  disneyplus_id:
+  disneyplus_id: 64c36a14-f4ee-4574-8591-25198574be40
   simpsonsworld_id: 304468035701
   good: maybe
   characters:
@@ -164,7 +164,7 @@ episodes:
   episode: 16
   description: With help from one of Professor Frink's inventions, Marge and the kids
     enter Homer's dreams in hopes of curing him of incontinence.
-  disneyplus_id:
+  disneyplus_id: fa2585ca-1fe7-4706-80fe-acf1cf3559eb
   simpsonsworld_id: 230597187582
   good: maybe
   characters:
@@ -173,7 +173,7 @@ episodes:
   episode: 17
   description: Homer becomes the last human employee at the nuclear power plant after
     Mr. Burns orders a mass firing and replaces staffers with robots.
-  disneyplus_id:
+  disneyplus_id: 63c15301-5e59-4015-82cb-44d1990674fb
   simpsonsworld_id: 230592067926
   good: maybe
   characters:
@@ -182,7 +182,7 @@ episodes:
   episode: 18
   description: Bart falls for Jimbo's girlfriend Shauna; Homer buys a tricked-out
     treadmill so he can watch old episodes of a 'Lost'-like television show.
-  disneyplus_id:
+  disneyplus_id: 6e6fd589-61de-4524-b1c6-dfec86a79ca0
   simpsonsworld_id: 311189571768
   good: maybe
   characters:
@@ -191,7 +191,7 @@ episodes:
   episode: 19
   description: The Simpsons vacation on a cruise liner, where Bart has so much fun
     he concocts a scheme to keep his family aboard the ship forever.
-  disneyplus_id:
+  disneyplus_id: 1cf3d987-255c-4e8a-8a7b-ff9b69efc674
   simpsonsworld_id: 273522243657
   good: maybe
   characters:
@@ -201,7 +201,7 @@ episodes:
   description: After being injured at work, Homer is given eight weeks of paid vacation,
     and decides to keep the news secret from his family; Bart gets Nelson hooked on
     Krustyburgers so he'll gain weight and stop picking on him.
-  disneyplus_id:
+  disneyplus_id: a9b57d21-527b-4e1b-b9fb-579a0d8e0829
   simpsonsworld_id: 230588995967
   good: maybe
   characters:
@@ -210,7 +210,7 @@ episodes:
   episode: 21
   description: Complications ensue when Flanders and Krabappel admit they're secretly
     married.
-  disneyplus_id:
+  disneyplus_id: c1b07def-9637-4b21-ba0b-445110bbb94b
   simpsonsworld_id: 277098051530
   good: maybe
   characters:
@@ -219,7 +219,7 @@ episodes:
   episode: 22
   description: Singer Lady Gaga attempts to cheer Lisa after she's voted the most
     unpopular kid at school.
-  disneyplus_id:
+  disneyplus_id: e922e60a-ed9e-4bf7-9d0b-48e54c01622d
   simpsonsworld_id: 233190467851
   good: maybe
   characters:
