--- a/episodes/season_24.yml
+++ b/episodes/season_24.yml
@@ -6,7 +6,7 @@ episodes:
   description: Bart seeks out Cletus's daughter, who has started a new life in New
     York City, Lisa wants to take in a Broadway play but ends up performing Shakespeare
     in Central Park.
-  disneyplus_id:
+  disneyplus_id: 15a66ce2-69d0-4f64-9d8b-dfd5d05111c0
   simpsonsworld_id: 221691971633
   good: maybe
   characters:
@@ -16,7 +16,7 @@ episodes:
   description: In these three Halloween tales... a black hole threatens to destroy
     Springfield; the Simpsons are terrorized by the unknown in a spoof of 'Paranormal
     Activity'; Bart time travels in a spoof of 'Back to the Future.'
-  disneyplus_id:
+  disneyplus_id: 1e683629-3099-4342-b9cd-830b67a607b2
   simpsonsworld_id: 221695555645
   good: true
   characters:
@@ -26,7 +26,7 @@ episodes:
   episode: 3
   description: Marge decides she wants to conceive another child; Bart realizes Lisa
     is up to something mysterious and vows to find out what it is.
-  disneyplus_id:
+  disneyplus_id: 4e9dc8fc-19c1-493a-bcb5-d2cd463512ed
   simpsonsworld_id: 221688899646
   good: maybe
   characters:
@@ -35,7 +35,7 @@ episodes:
   episode: 4
   description: Homer and Marge search for Grampa after he disappears from the retirement
     home; Homer invests Lisa's college fund in an online poker Web site.
-  disneyplus_id:
+  disneyplus_id: 95a59aa7-8dd8-4b37-946d-ba4b2370fe1b
   simpsonsworld_id: 221688899887
   good: maybe
   characters:
@@ -44,7 +44,7 @@ episodes:
   episode: 5
   description: While serving jury duty, Fat Tony appoints an accountant as his temporary
     Don; an anemic Lisa eats bugs to increase her iron level.
-  disneyplus_id:
+  disneyplus_id: 2364e35d-b013-4ce2-8781-2528238ca84a
   simpsonsworld_id: 221694531617
   good: maybe
   characters:
@@ -54,7 +54,7 @@ episodes:
   description: After his beloved new tablet "MyPad" computer is destroyed, a despondent
     Homer finds solace in a message seemingly written by God - until newsman Kent
     Brockman sets out to debunk the "miracle."
-  disneyplus_id:
+  disneyplus_id: 13091b84-3bf8-49b1-a289-1196270e20c5
   simpsonsworld_id: 229733443727
   good: maybe
   characters:
@@ -63,7 +63,7 @@ episodes:
   episode: 7
   description: Homer is elated when a cool dad and his family move next door, but
     his happiness ends when he realizes he has little in common with his new neighbors.
-  disneyplus_id:
+  disneyplus_id: 9f181a16-923c-4b5f-b16c-6ed616dbd5bf
   simpsonsworld_id: 222374467937
   good: maybe
   characters:
@@ -73,7 +73,7 @@ episodes:
   description: When Bart accuses Homer of not liking Santa's Little Helper, Grampa
     recounts the story of how Homer's heart broke after he was forced to give away
     his childhood dog.
-  disneyplus_id:
+  disneyplus_id: 31835d74-90cf-407d-a5b4-5cfdf65364dd
   simpsonsworld_id: 222491715618
   good: maybe
   characters:
@@ -82,7 +82,7 @@ episodes:
   episode: 9
   description: The Simpsons anticipate the apocalypse after Homer inadvertently triggers
     a shockwave that disables all electronic devices in Springfield.
-  disneyplus_id:
+  disneyplus_id: e5ab93cc-8b25-4f41-ba33-618cd72303f1
   simpsonsworld_id: 1094312515873
   good: maybe
   characters:
@@ -91,7 +91,7 @@ episodes:
   episode: 10
   description: Bart must pass a district-wide test to save Springfield Elementary;
     Homer uses a discarded parking meter to steal from unsuspecting drivers.
-  disneyplus_id:
+  disneyplus_id: 9d7c7493-3f24-4913-9982-af323ebc6a25
   simpsonsworld_id: 222388291945
   good: maybe
   characters:
@@ -100,7 +100,7 @@ episodes:
   episode: 11
   description: After narrowly surviving a tornado, Marge and Homer embark on a search
     for a couple who'll serve as Bart, Lisa and Maggie's legal guardians.
-  disneyplus_id:
+  disneyplus_id: b4979e57-2149-444f-a2ef-ffb99cad5fac
   simpsonsworld_id: 257684035668
   good: maybe
   characters:
@@ -109,7 +109,7 @@ episodes:
   episode: 12
   description: Bart attempts to patch things up with his old sweetheart, Mary Spuckler,
     and despite Lisa's input, still manages to sabotage his chances of finding love.
-  disneyplus_id:
+  disneyplus_id: 680107c6-aa55-49d7-aad6-6e2260625b65
   simpsonsworld_id: 257681987573
   good: maybe
   characters:
@@ -118,7 +118,7 @@ episodes:
   episode: 13
   description: With Bart's help, Milhouse transforms into his father; Homer discovers
     a talent for finding things in hidden-picture books.
-  disneyplus_id:
+  disneyplus_id: 9b94d4eb-f41a-4c7b-af02-75b13d18fa01
   simpsonsworld_id: 257686595928
   good: maybe
   characters:
@@ -128,7 +128,7 @@ episodes:
   description: With encouragement from Mr. Burns, Grampa revives a famous wrestling
     character from his past whom audiences love to hate, and despite Homer and Marge's
     objections, incorporates Bart into the act.
-  disneyplus_id:
+  disneyplus_id: 637c1f7b-b52b-4ac1-8a2b-781cc6254fdb
   simpsonsworld_id: 257687107857
   good: maybe
   characters:
@@ -138,7 +138,7 @@ episodes:
   description: When Flanders gives Homer a black eye, he turns to the Bible for answers;
     Lisa is shocked and puzzled when she discovers that a substitute teacher hates
     her.
-  disneyplus_id:
+  disneyplus_id: 50ca0957-7857-490c-8a02-91daa99ec26c
   simpsonsworld_id: 257689667578
   good: maybe
   characters:
@@ -148,7 +148,7 @@ episodes:
   description: Bart stands trial in youth court after he's accused of pulling an Easter
     prank; after buying a comic book collection, Mr. Burns transforms into a 'Batman'-like
     superhero.
-  disneyplus_id:
+  disneyplus_id: 56b4c00a-9a1d-4e34-95ee-fb57416428e7
   simpsonsworld_id: 257714243647
   good: maybe
   characters:
@@ -157,7 +157,7 @@ episodes:
   episode: 17
   description: In an episode that focuses on the choices people make and their outcomes...
     Homer attempts to save his marriage; Milhouse woos Lisa.
-  disneyplus_id:
+  disneyplus_id: 6b63cb85-0417-4763-badc-cfe3abcafe10
   simpsonsworld_id: 1094243907551
   good: maybe
   characters:
@@ -166,7 +166,7 @@ episodes:
   episode: 18
   description: Lovejoy quits the church after the Parson appoints a charismatic reverend
     to reinvigorate the parish; Marge tracks down her old wedding dress.
-  disneyplus_id:
+  disneyplus_id: d7de92f2-f378-4328-86fd-1ba45b27e794
   simpsonsworld_id: 257728579751
   good: maybe
   characters:
@@ -176,7 +176,7 @@ episodes:
   description: Moe's new suit catches the attention of venture capitalists, leading
     to the distribution of Moe's own brand of whiskey; Bart cares for Grampa; Lisa
     realizes that her favorite musicians have been turned into holograms.
-  disneyplus_id:
+  disneyplus_id: 19842aab-5cbb-4b3f-a454-f519c3927f5e
   simpsonsworld_id: 257737283653
   good: maybe
   characters:
@@ -185,7 +185,7 @@ episodes:
   episode: 20
   description: Bart takes piano lessons in hopes of impressing his beautiful young
     teacher; Homer goes completely bald; Marge teaches a Russian man how to drive.
-  disneyplus_id:
+  disneyplus_id: 44088609-5b17-4aa8-90f3-3ccbec6a5fdb
   simpsonsworld_id: 257760323921
   good: maybe
   characters:
@@ -194,7 +194,7 @@ episodes:
   episode: 21
   description: Homer, Moe and Lenny travel to Iceland to retrieve lottery winnings
     that Carl ran off with.
-  disneyplus_id:
+  disneyplus_id: 407d6ec8-d258-4dc3-827c-a81cf50c8828
   simpsonsworld_id: 257753667515
   good: maybe
   characters:
@@ -203,7 +203,7 @@ episodes:
   episode: 22
   description: Homer secretly reconstructs a kiddy train as Marge's anniversary present;
     Marge attracts the attention of a potential paramour online.
-  disneyplus_id:
+  disneyplus_id: 7220ab72-469d-4ce0-a41e-d727c10e72c4
   simpsonsworld_id: 257768003795
   good: maybe
   characters:
